Bug 1890930 - Initialize fstreams from a std::filesystem::path on Windows. r=gsvelto

Differential Revision: https://phabricator.services.mozilla.com/D207245